# hotline

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  example_monolith.rs  serialization_example.rs  shims.rs  static_dispatch_demo.rs
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: claude.yml
fonts/owlet/: owlet.json
host/: Cargo.toml
host/src/: main.rs  retro.rs
hotline/: Cargo.toml  build.rs
hotline-macros/: Cargo.toml
hotline-macros/src/: constants.rs  discovery.rs  lib.rs  parser.rs  utils.rs
hotline-macros/src/codegen/: core.rs  custom_types.rs  ffi.rs  fields.rs  methods.rs  mod.rs  serde_impl.rs  type_hash.rs  wrapper.rs
hotline/src/: command.rs  lib.rs  macho_loader.rs  object_serde.rs  tlv_support.rs  typed.rs
hotline/src/monolith/: mod.rs
lib/src/: lib.rs
objects/AnthropicClient/: Cargo.toml
objects/AnthropicClient/src/: lib.rs
objects/Application/: Cargo.toml  build.rs
objects/Application/shaders/: quad.frag  quad.vert  solid.frag  solid.vert
objects/Application/src/: gpu_renderer.rs  lib.rs
objects/ChatInterface/: Cargo.toml
objects/ChatInterface/src/: lib.rs  test_send_sync.rs
objects/Checkbox/: Cargo.toml
objects/Checkbox/src/: lib.rs
objects/Circle/: Cargo.toml
objects/Circle/src/: lib.rs
objects/ClickInspector/: Cargo.toml
objects/ClickInspector/src/: lib.rs
objects/CodeEditor/: Cargo.toml
objects/CodeEditor/src/: lib.rs
objects/ColorWheel/: Cargo.toml
objects/ColorWheel/src/: lib.rs
objects/ContextMenu/: Cargo.toml
objects/CpuTextRenderer/: Cargo.toml
objects/Font/: Cargo.toml
objects/Font/src/: lib.rs
objects/GPURenderer/: Cargo.toml
objects/GameController/: Cargo.toml
objects/HighlightLens/: Cargo.toml
objects/Image/: Cargo.toml
objects/JSONLoader/: Cargo.toml
objects/MenuBar/: Cargo.toml
objects/ObjectInspector/: Cargo.toml
objects/PNGLoader/: Cargo.toml
objects/PolygonMenu/: Cargo.toml
objects/Rect/: Cargo.toml
objects/RectMover/: Cargo.toml
objects/RegularPolygon/: Cargo.toml
objects/Starfield/: Cargo.toml
objects/TextArea/: Cargo.toml
objects/TextRenderer/: Cargo.toml
objects/WindowManager/: Cargo.toml
objects/rect/: Cargo.toml
paste/: build.rs
paste/src/: segment.rs
runtime/: Cargo.toml  build.rs
runtime/src/: lib.rs  main.rs  object_usage.rs  shim_gen.rs  test_main.rs  typed_runtime.rs
runtime/src/shaders/: rect.wgsl
signatures/: HighlightLens.sig  Rect.sig  WindowManager.sig
src/: main.rs
(+22 files in other folders)
