[package]
edition = "2024"
name = "Application"
version = "0.1.0"

[lib]
crate-type = ["dylib"]

[dependencies]
hotline = {path = "../../hotline"}
sdl3 = { version = "0.14" }
png = "0.17"

[target.'cfg(target_os = "linux")'.dependencies]
sdl3 = { version = "0.14", features = ["build-from-source"] }
